Make Location and Compass more responsive
to various window sizes and scalings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,7 @@
 
     <!-- Compass -->
     <string name="compass_button_info_content_description">Info</string>
-    <string name="compass_declination">%.2f°</string>
-    <string name="compass_declination_label">Declination</string>
+    <string name="compass_declination">Declination: %.2f°</string>
     <string name="compass_degrees">%d°</string>
     <string name="compass_degrees_content_description">Current bearing %d degrees</string>
     <string name="compass_degrees_content_description_unknown">Current bearing unknown</string>
@@ -95,7 +94,7 @@
     <string name="location_permission_required_button_ok" translatable="false">@string/common_ok</string>
     <string name="location_permission_required_button_privacy_policy" translatable="false">@string/common_privacy_policy</string>
     <string name="location_permission_required_body">Positional is private by design. Your location is never shared with anyone unless you explicitly share it.</string>
-    <string name="location_permission_required_title">Location Permission is Required</string>
+    <string name="location_permission_required_title">Location permission required</string>
     <string name="location_permission_without_rationale_title">Let\'s get started!</string>
     <string name="location_permission_without_rationale_message">In order to show your location, Positional needs permission. Your location is never recorded. For more details, check out the simple privacy policy.</string>
     <string name="location_snackbar_coordinates_copied">Coordinates copied</string>
