--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,8 +93,8 @@
     <string name="location_launch_label">My Location on %s (Exported from Positional)</string>
     <string name="location_permission_required_button_ok" translatable="false">@string/common_ok</string>
     <string name="location_permission_required_button_privacy_policy" translatable="false">@string/common_privacy_policy</string>
-    <string name="location_permission_required_body">Positional is private by design. Your location is never shared with anyone unless you explicitly share it.</string>
-    <string name="location_permission_required_title">Location permission required</string>
+    <string name="location_permission_required_body">Your location is kept completely private.</string>
+    <string name="location_permission_required_title">Precise location permission required</string>
     <string name="location_permission_without_rationale_title">Let\'s get started!</string>
     <string name="location_permission_without_rationale_message">In order to show your location, Positional needs permission. Your location is never recorded. For more details, check out the simple privacy policy.</string>
     <string name="location_snackbar_coordinates_copied">Coordinates copied</string>
