--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,10 +15,10 @@
     <string name="bottom_navigation_compass">Compass</string>
     <string name="bottom_navigation_location">Location</string>
     <string name="bottom_navigation_settings">Settings</string>
-    <string name="bottom_navigation_solunar">Solunar</string>
+    <string name="bottom_navigation_sun">Sun</string>
 
     <!-- Compass -->
-    <string name="compass_button_info_content_description">Info</string>
+    <string name="compass_button_help_content_description">Help</string>
     <string name="compass_declination">Declination: %.2f°</string>
     <string name="compass_degrees">%d°</string>
     <string name="compass_degrees_content_description">Current bearing %d degrees</string>
@@ -60,8 +60,8 @@
     <string name="location_altitude_metric">%.1f m</string>
     <string name="location_bearing">%.0f°</string>
     <string name="location_bearing_accuracy">± %.0f</string>
-    <string name="location_button_info_content_description">Info</string>
-    <string name="location_button_info_tooltip">Info</string>
+    <string name="location_button_help_content_description">Help</string>
+    <string name="location_button_help_tooltip">Help</string>
     <string name="location_button_map_content_description">Open in map app</string>
     <string name="location_button_lock_content_description_off">Lock screen (currently off)</string>
     <string name="location_button_lock_content_description_on">Lock screen (currently on)</string>
@@ -141,17 +141,18 @@
     <string name="settings_units_value_imperial_name">Imperial</string>
     <string name="settings_units_value_metric_name">Metric</string>
 
-    <!-- Solunar -->
-    <string name="solunar_button_info_content_description">Info</string>
-    <string name="solunar_button_next_day_content_description">Next day</string>
-    <string name="solunar_button_previous_day_content_description">Previous day</string>
-    <string name="solunar_button_today">Jump to today</string>
-    <string name="solunar_label_dawn_dusk_astronomical">Astronomical</string>
-    <string name="solunar_label_dawn_dusk_civil">Civil</string>
-    <string name="solunar_label_dawn_dusk_nautical">Nautical</string>
-    <string name="solunar_text_time_none">@string/common_dash</string>
-    <string name="solunar_title_dawn">Dawn</string>
-    <string name="solunar_title_dusk">Dusk</string>
-    <string name="solunar_title_sunrise">Sunrise</string>
-    <string name="solunar_title_sunset">Sunset</string>
+    <!-- Sun -->
+    <string name="sun_button_help_content_description">Help</string>
+    <string name="sun_button_next_day_content_description">Next day</string>
+    <string name="sun_button_previous_day_content_description">Previous day</string>
+    <string name="sun_button_select_click_label">Next day</string>
+    <string name="sun_button_today">Jump to today</string>
+    <string name="sun_label_dawn_dusk_astronomical">Astronomical</string>
+    <string name="sun_label_dawn_dusk_civil">Civil</string>
+    <string name="sun_label_dawn_dusk_nautical">Nautical</string>
+    <string name="sun_text_time_none">@string/common_dash</string>
+    <string name="sun_title_dawn">Dawn</string>
+    <string name="sun_title_dusk">Dusk</string>
+    <string name="sun_title_sunrise">Sunrise</string>
+    <string name="sun_title_sunset">Sunset</string>
 </resources>
