--- a/feature/settings/ui/src/main/res/values/strings.xml
+++ b/feature/settings/ui/src/main/res/values/strings.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="ui_settings_compass_mode_dialog_title">Compass mode</string>
-    <string name="ui_settings_compass_mode_title">Compass mode</string>
-    <string name="ui_settings_compass_mode_value_magnetic_name">Magnetic North</string>
-    <string name="ui_settings_compass_mode_value_true_name">True North</string>
-    <string name="ui_settings_compass_north_vibration_dialog_title">Compass north vibration</string>
-    <string name="ui_settings_compass_north_vibration_title">Compass north vibration</string>
-    <string name="ui_settings_compass_north_vibration_value_long">Long</string>
-    <string name="ui_settings_compass_north_vibration_value_medium">Medium</string>
-    <string name="ui_settings_compass_north_vibration_value_none">None</string>
-    <string name="ui_settings_compass_north_vibration_value_short">Short</string>
-    <string name="ui_settings_coordinates_format_dialog_title">Coordinates format</string>
-    <string name="ui_settings_coordinates_format_title">Coordinates format</string>
-    <string name="ui_settings_coordinates_format_value_dd_name">Decimal degrees</string>
-    <string name="ui_settings_coordinates_format_value_ddm_name">Degrees &amp; decimal minutes</string>
-    <string name="ui_settings_coordinates_format_value_dms_name">Degrees, minutes, &amp; seconds</string>
-    <string name="ui_settings_coordinates_format_value_mgrs_name">MGRS</string>
-    <string name="ui_settings_coordinates_format_value_utm_name">UTM</string>
-    <string name="ui_settings_license_title">License</string>
-    <string name="ui_settings_privacy_policy_title" translatable="false">@string/core_ui_privacy_policy</string>
-    <string name="ui_settings_show_accuracies_description">Show or hide accuracies of measurements</string>
-    <string name="ui_settings_show_accuracies_title">Show accuracies</string>
-    <string name="ui_settings_theme_dialog_title">Select a theme</string>
-    <string name="ui_settings_theme_dialog_confirm" translatable="false">@string/core_ui_save</string>
-    <string name="ui_settings_theme_dialog_dismiss" translatable="false">@string/core_ui_cancel</string>
-    <string name="ui_settings_theme_title">Theme</string>
-    <string name="ui_settings_theme_value_dark_name">Dark</string>
-    <string name="ui_settings_theme_value_device_name">Device</string>
-    <string name="ui_settings_theme_value_light_name">Light</string>
-    <string name="ui_settings_title">Settings</string>
-    <string name="ui_settings_units_dialog_title">Units of measurement</string>
-    <string name="ui_settings_units_title">Units of measurement</string>
-    <string name="ui_settings_units_value_imperial_name">Imperial</string>
-    <string name="ui_settings_units_value_metric_name">Metric</string>
+    <string name="feature_settings_ui_compass_mode_dialog_title">Compass mode</string>
+    <string name="feature_settings_ui_compass_mode_title">Compass mode</string>
+    <string name="feature_settings_ui_compass_mode_value_magnetic_name">Magnetic North</string>
+    <string name="feature_settings_ui_compass_mode_value_true_name">True North</string>
+    <string name="feature_settings_ui_compass_north_vibration_dialog_title">Compass north vibration</string>
+    <string name="feature_settings_ui_compass_north_vibration_title">Compass north vibration</string>
+    <string name="feature_settings_ui_compass_north_vibration_value_long">Long</string>
+    <string name="feature_settings_ui_compass_north_vibration_value_medium">Medium</string>
+    <string name="feature_settings_ui_compass_north_vibration_value_none">None</string>
+    <string name="feature_settings_ui_compass_north_vibration_value_short">Short</string>
+    <string name="feature_settings_ui_coordinates_format_dialog_title">Coordinates format</string>
+    <string name="feature_settings_ui_coordinates_format_title">Coordinates format</string>
+    <string name="feature_settings_ui_coordinates_format_value_dd_name">Decimal degrees</string>
+    <string name="feature_settings_ui_coordinates_format_value_ddm_name">Degrees &amp; decimal minutes</string>
+    <string name="feature_settings_ui_coordinates_format_value_dms_name">Degrees, minutes, &amp; seconds</string>
+    <string name="feature_settings_ui_coordinates_format_value_mgrs_name">MGRS</string>
+    <string name="feature_settings_ui_coordinates_format_value_utm_name">UTM</string>
+    <string name="feature_settings_ui_license_title">License</string>
+    <string name="feature_settings_ui_privacy_policy_title" translatable="false">@string/core_ui_privacy_policy</string>
+    <string name="feature_settings_ui_show_accuracies_description">Show or hide accuracies of measurements</string>
+    <string name="feature_settings_ui_show_accuracies_title">Show accuracies</string>
+    <string name="feature_settings_ui_theme_dialog_title">Select a theme</string>
+    <string name="feature_settings_ui_theme_dialog_confirm" translatable="false">@string/core_ui_save</string>
+    <string name="feature_settings_ui_theme_dialog_dismiss" translatable="false">@string/core_ui_cancel</string>
+    <string name="feature_settings_ui_theme_title">Theme</string>
+    <string name="feature_settings_ui_theme_value_dark_name">Dark</string>
+    <string name="feature_settings_ui_theme_value_device_name">Device</string>
+    <string name="feature_settings_ui_theme_value_light_name">Light</string>
+    <string name="feature_settings_ui_title">Settings</string>
+    <string name="feature_settings_ui_units_dialog_title">Units of measurement</string>
+    <string name="feature_settings_ui_units_title">Units of measurement</string>
+    <string name="feature_settings_ui_units_value_imperial_name">Imperial</string>
+    <string name="feature_settings_ui_units_value_metric_name">Metric</string>
 </resources>
